# code-review-tui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  diff.rs  highlight.rs  lib.rs  main.rs  review.rs
tests/: diff_deleted_and_empty.rs  diff_staged_unstaged.rs  diff_untracked.rs  highlight.rs  review_line_comment.rs  review_range_comment.rs  review_report_header.rs  tui_editor_range.rs  tui_events.rs  tui_flow.rs  tui_highlight.rs  tui_render.rs  tui_scroll.rs  tui_side.rs  tui_thread.rs
tests/common/: mod.rs
tests/common_tui/: mod.rs
